[package]
name = "unsaferawbuf"
edition = "2021"
rust-version = "1.67.0"
version = "0.1.3"
build = "build.rs"
authors = ["Starz0r"]
license = "Zlib"
readme = "README.md"
description = "Convenient interface to a portion of manually allocated memory."
documentation = "https://docs.rs/unsaferawbuf/latest"
repository = "https://github.com/Starz0r/unsaferawbuf-rs"
keywords = ["ffi", "memory", "io"]
categories = ["os"]

[dev-dependencies]
libc = "0.2.135"