[package]
name = "unsaferawbuf"
version = "0.1.3"
edition = "2018"
build = "build.rs"
authors = ["Starz0r"]
license = "Zlib"
readme = "README.md"
description = "Convenient interface to a portion of manually allocated memory."
documentation = "https://docs.rs/unsaferawbuf/latest"
repository = "https://github.com/Starz0r/unsaferawbuf-rs"
keywords = ["ffi", "memory", "io"]
categories = ["os"]
rust-version = "1.56.0"

[dev-dependencies]
libc = "0.2.135"