[package]
name = "unsaferawbuf"
version = "0.1.3"
edition = "2018"
build = "build.rs"
resolver = "1"
authors = ["Starz0r"]
license = "Zlib"
readme = "README.md"
description = "Convenient interface to a portion of manually allocated memory."
documentation = "https://docs.rs/unsaferawbuf"
repository = "https://github.com/Starz0r/unsaferawbuf-rs"
keywords = ["ffi", "memory", "io"]
categories = ["os"]
maintenance = { status = "experimental" }
rust-version = "1.56.0"

[dependencies]
sealed = "=0.5.0"

[dev-dependencies]
libc = "0.2.135"
